[gd_scene load_steps=3 format=3 uid="uid://o2nvjc7dgll3"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_dl1xg"]
[ext_resource type="Theme" uid="uid://1ql0xjxlvt5v" path="res://Themes/main_menu.tres" id="1_gmacp"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( "1_gmacp" )
script = ExtResource( "1_dl1xg" )

[node name="Title" type="Label" parent="."]
anchor_left = 0.21582
anchor_top = 0.145
anchor_right = 0.78418
anchor_bottom = 0.455
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 96
text = "Townwar"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true
metadata/_edit_use_anchors_ = true

[node name="MainMenuButtons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="SingleplayerButton" type="Button" parent="MainMenuButtons"]
anchor_left = 0.403809
anchor_top = 0.473333
anchor_right = 0.596191
anchor_bottom = 0.58
grow_horizontal = 2
grow_vertical = 2
text = "Singleplayer"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true
metadata/_edit_use_anchors_ = true

[node name="MultiplayerButton" type="Button" parent="MainMenuButtons"]
anchor_left = 0.403809
anchor_top = 0.615
anchor_right = 0.596191
anchor_bottom = 0.731667
grow_horizontal = 2
grow_vertical = 2
text = "Multiplayer"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="Button" parent="MainMenuButtons"]
anchor_left = 0.395508
anchor_top = 0.765833
anchor_right = 0.604492
anchor_bottom = 0.8475
offset_bottom = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="MainMenuButtons"]
anchor_left = 0.457031
anchor_top = 0.88
anchor_right = 0.542969
anchor_bottom = 0.96
grow_horizontal = 2
grow_vertical = 0
text = "Quit"
metadata/_edit_layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="MultiplayerMenuButtons" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LocalMultiplayerButton" type="Button" parent="MultiplayerMenuButtons"]
anchor_left = 0.407227
anchor_top = 0.45
anchor_right = 0.592773
anchor_bottom = 0.55
text = "Local Multiplayer"
metadata/_edit_use_anchors_ = true

[node name="OnlineMultiplayerButton" type="Button" parent="MultiplayerMenuButtons"]
anchor_left = 0.388672
anchor_top = 0.575833
anchor_right = 0.611328
anchor_bottom = 0.690833
grow_horizontal = 2
grow_vertical = 2
text = "Online Multiplayer (WIP)"
metadata/_edit_layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="MultiplayerMenuButtons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -120.0
offset_right = 53.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"
metadata/_edit_layout_mode = 1

[connection signal="pressed" from="MainMenuButtons/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="MainMenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MultiplayerMenuButtons/LocalMultiplayerButton" to="." method="_on_local_multiplayer_button_pressed"]
[connection signal="pressed" from="MultiplayerMenuButtons/BackButton" to="." method="_on_mm_back_button_pressed"]
